argocd/applications/prod-green/cluster-resources/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: prometheus-green.talentos.darey.io
    external-dns.alpha.kubernetes.io/manage: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - prometheus-green.talentos.darey.io
      secretName: prometheus-green-tls
  rules:
    - host: prometheus-green.talentos.darey.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
